--- a/web/views/includes/footer.include.ejs
+++ b/web/views/includes/footer.include.ejs
@@ -49,7 +49,7 @@
   <div class="footer__copyright">
     <p class="footer__copyright-text">
       &copy; <%= new Date().getFullYear() %> Dorpsbelangen Bergen, website door
-      <a target="_blank" href="https://me.fannst.nl/">Luke A.C.A. Rieff</a>
+      <a target="_blank" href="https://software.fannst.nl/">Fannst Software</a>
     </p>
   </div>
 </footer>
