--- a/web/views/uw-partij/dorpen.view.ejs
+++ b/web/views/uw-partij/dorpen.view.ejs
@@ -7,6 +7,29 @@
   <div class="wrapper">
     <%- include ('../includes/header.include.ejs') %>
     <div class="wrapper-main">
+      <ul class="wrapper-main__list">
+        <li class="wrapper-main__list__element">
+          <a class="btn btn-primary">Afferden</a>
+        </li>
+        <li class="wrapper-main__list__element">
+          <a class="btn btn-dark">Aijen</a>
+        </li>
+        <li class="wrapper-main__list__element">
+          <a class="btn btn-primary">Bergen</a>
+        </li>
+        <li class="wrapper-main__list__element">
+          <a class="btn btn-dark">Nieuw Bergen</a>
+        </li>
+        <li class="wrapper-main__list__element">
+          <a class="btn btn-primary">Siebengewald</a>
+        </li>
+        <li class="wrapper-main__list__element">
+          <a class="btn btn-dark">Well</a>
+        </li>
+        <li class="wrapper-main__list__element">
+          <a class="btn btn-primary">Wellerlooi</a>
+        </li>
+      </ul>
     </div>
     <%- include ('../includes/footer.include.ejs') %>
   </div>
