--- a/web/views/uw-partij/missie-visie.view.ejs
+++ b/web/views/uw-partij/missie-visie.view.ejs
@@ -7,6 +7,85 @@
   <div class="wrapper">
     <%- include ('../includes/header.include.ejs') %>
     <div class="wrapper-main">
+      <p class="wrapper-main__text title">
+        DORPSBELANGEN BERGEN LIMBURG
+        <br />
+        Missie-Statement:
+      </p>
+      <p class="wrapper-main__text large">
+        Het optimaliseren van het Welzijn van de Bergsche Burgers afzonderlijk
+        en in zijn Sociale Interactie binnen de Dorpse Gemeenschappen en
+        daarbuiten. Het stimuleren van de Welvaart binnen de Dorpsbelangen op
+        een schone, veilige, groene en duurzame manier waarbij we de schaal
+        en realiteit niet uit het oog willen verliezen. Innovaties omarmen we daar
+        waar ze zullen leiden tot (toekomstige) verbeteringen.
+      </p>
+      <hr />
+      <p class="wrapper-main__text title">
+        Dat willen we bereiken door:
+      </p>
+      <ul class="wrapper-main__list wrapper-main__list-dotted">
+        <li class="wrapper-main__list__element">
+          <p class="wrapper-main__text">
+            <strong>Dorpsbelangen</strong>
+            wil de grootste politieke partij worden van de gemeente
+            Bergen Limburg en samen met burgers en bedrijven, toeristen en ambtenaren,
+            andere politieke partijen en belanghebbenden zich inzetten voor deze
+            prachtige mooie Gemeente met haar net zo prachtige mooie mensen zodanig
+            dat het voor iedereen een plezier is om hier te wonen, te werken, te
+            ondernemen en te verblijven.
+          </p>
+        </li>
+        <li class="wrapper-main__list__element">
+          <p class="wrapper-main__text">
+            <strong>Dorpsbelangen</strong>
+            wil een gemeente die burgers en bedrijven zo goed
+            mogelijk faciliteert bij het realiseren van hun doelen en hun ontwikkelpotentieel
+            en zorg biedt aan hen die dat nodig hebben. Daarbij zullen we activiteiten
+            stimuleren, investeren in relaties en zorgen dat mensen aansluiten.
+            Nieuwsgierigheid, betrokkenheid en blijven leren activeren en mensen laten
+            ontvangen en geven als een wederkerigheid van goede relaties. Ook willen
+            we mensen meer bewust laten worden van hun Omgeving en Sociale
+            Interacties.
+          </p>
+        </li>
+        <li class="wrapper-main__list__element">
+          <p class="wrapper-main__text">
+            <strong>Dorpsbelangen</strong>
+            wil een schoon, veilig en groen, en duurzame
+            omgeving waar geen plaats meer is voor niet gewenste ondernemingen en we
+            willen (lokale) ondernemers stimuleren om te ondernemen in de gewenste
+            sectoren waarbij niet alleen de ondernemer de lusten heeft maar waar we
+            meer van elkaar kunnen delen en leren en een inbedding van het geheel in de
+            gemeenschap plaats kan vinden.
+          </p>
+        </li>
+        <li class="wrapper-main__list__element">
+          <p class="wrapper-main__text">
+            <strong>Dorpsbelangen</strong>
+            wil dat we een gemeenschap zijn waar we open zullen
+            staan voor innovatie en het stimuleren en elkaar aanzetten voor
+            vernieuwingen en verbeteringen. Nabuurschap moet een automatisme worden
+            in onze gedragingen en dorpscultuur. We willen behouden wat goed is en
+            veranderen en verbeteren waar mogelijk.
+          </p>
+        </li>
+        <li class="wrapper-main__list__element">
+          <p class="wrapper-main__text">
+            <strong>Dorpsbelangen</strong>
+            wil opkomen voor de democratische rechten van al
+            onze burgers. Wij willen niet meewerken aan het overhevelen van
+            <br />
+            bevoegdheden van deze gemeente, en dus van haar burgers, naar
+            samenwerkingsverbanden waarop burgers geen invloed hebben. Wij willen
+            juist de invloed van de burger vergroten in het politieke landschap en vinden
+            dat ook een democratisch recht. Wij zullen sturen op zoveel mogelijk
+            samenwerking binnen de grenzen van de gemeente en daar over heen daar
+            waar wij dat als verbetering zien. Ook in die verbanden zullen wij ons hard
+            maken voor de rechten van de individuele burger.
+          </p>
+        </li>
+      </ul>
     </div>
     <%- include ('../includes/footer.include.ejs') %>
   </div>
