--- a/web/public/src/styles/nieuws-media.scss
+++ b/web/public/src/styles/nieuws-media.scss
@@ -1,3 +1,38 @@
+.nieuws-media__pagination {
+  text-align: center;
+
+  & > .nieuws-media__pagination-ul {
+    & > .nieuws-media__pagination-ul-li {
+      display: inline-block;
+      padding: 0.5rem;
+      border-radius: 0.2rem;
+
+      & > a {
+        color: #323232;
+        text-decoration: none;
+        font-size: 0.8rem;
+        font-weight: bold;
+      }
+
+      border-top: 1px solid #b1b1b1;
+      border-bottom: 1px solid #b1b1b1;
+      border-right: 1px solid #b1b1b1;
+
+      &:first-child {
+        border-left: 1px solid #b1b1b1;
+      }
+    
+      &.current {
+        background-color: #e1e1e1;
+      }
+  
+      &.nc {
+        background-color: #dcdcdc;
+      }
+    }
+  }
+}
+
 .nieuws-media-list {
   @media only screen and (min-width: 700px) {
     & > .nieuws-media-list__item {
