--- a/web/views/nieuws-media-item.view.ejs
+++ b/web/views/nieuws-media-item.view.ejs
@@ -24,14 +24,14 @@
               <path d="M0 0h24v24H0z" fill="none"/>
               <path d="M21.41 11.58l-9-9C12.05 2.22 11.55 2 11 2H4c-1.1 0-2 .9-2 2v7c0 .55.22 1.05.59 1.42l9 9c.36.36.86.58 1.41.58.55 0 1.05-.22 1.41-.59l7-7c.37-.36.59-.86.59-1.41 0-.55-.23-1.06-.59-1.42zM5.5 7C4.67 7 4 6.33 4 5.5S4.67 4 5.5 4 7 4.67 7 5.5 6.33 7 5.5 7z"/>
             </svg>
-            <span><%= artikel.m_Categorie.m_CategorieNaam %></span>
+            <span><%= artikel.m_Categorie ? artikel.m_Categorie.m_CategorieNaam : 'Geen Categorie' %></span>
           </li>
           <li>
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
               <path d="M0 0h24v24H0z" fill="none"/>
               <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
             </svg>
-            <span><%= artikel.m_User.m_Username %></span>
+            <span><%= artikel.m_User ? artikel.m_User.m_Username : 'Zonder Auteur' %></span>
           </li>
         </ul>
         <div class="nieuws-media-item__content">
