--- a/web/views/includes/footer.include.ejs
+++ b/web/views/includes/footer.include.ejs
@@ -8,9 +8,9 @@
         <li class="footer__top-col-list__elem">
           <a target="_blank" href="/hidden/admin-redirect">Administratie</a>
         </li>
-        <li class="footer__top-col-list__elem">
+        <!-- <li class="footer__top-col-list__elem">
           <a href="/feed/">Nieuwsfeed</a>
-        </li>
+        </li> -->
       </ul>
     </div>
     <div class="footer__top-col">
@@ -43,7 +43,7 @@
         Email: <a href="mailto:dorpsbelangenbergen@gmail.com">dorpsbelangenbergen@gmail.com</a>
       </p>
       <br />
-      <a class="a-clear btn btn-light" href="/contact">Vul formulier in</a>
+      <a class="a-clear btn btn-rounded btn-light-hover-red" href="/contact">Vul formulier in</a>
     </div>
   </div>
   <div class="footer__copyright">
@@ -54,10 +54,7 @@
     </form>
     <br />
     <p class="footer__copyright-text">
-      &copy; <%= new Date().getFullYear() %> Dorpsbelangen Bergen, website door
-      <a target="_blank" href="https://me.fannst.nl/">Luke Rieff</a>
-      <br /><br />
-      <a target="_blank" href="http://localhost:1337/">[ Strapi ]</a>
+      &copy; <%= new Date().getFullYear() %> Dorpsbelangen Bergen, Fannst Webdesign
     </p>
   </div>
 </footer>
