--- a/web/views/leden-pagina.view.ejs
+++ b/web/views/leden-pagina.view.ejs
@@ -16,6 +16,66 @@
         </ul>
       </div>
       <hr />
+      <div class="wrapper-main-ledenpagina__leden">
+        <!-- Voorzitter -->
+        <figure class="wrapper-main-ledenpagina__leden__lid">
+          <div class="wrapper-main-ledenpagina__leden__lid-title">
+            <strong>Voorzitter</strong>
+            <br />
+            Indy
+          </div>
+          <img
+            class="wrapper-main-ledenpagina__leden__lid-img"
+            src="/static/images/contact/contactpersoon.png"
+          />
+          <p class="wrapper-main-ledenpagina__leden__lid-text">
+            <strong>Tel: </strong>
+            <a href="tel:+31630021136">+31 6 30021136</a>
+            <br />
+            <strong>Email: </strong>
+            <a href="mailto:patrick.robben@online.nl">patrick.robben@online.nl</a>
+          </p>
+        </figure>
+        <!-- Penningmeester -->
+        <figure class="wrapper-main-ledenpagina__leden__lid">
+          <div class="wrapper-main-ledenpagina__leden__lid-title">
+            <strong>Penningmeester</strong>
+            <br />
+            Indy
+          </div>
+          <img
+            class="wrapper-main-ledenpagina__leden__lid-img"
+            src="/static/images/contact/contactpersoon.png"
+          />
+          <p class="wrapper-main-ledenpagina__leden__lid-text">
+            <strong>Tel: </strong>
+            <a href="tel:+31630021136">+31 6 30021136</a>
+            <br />
+            <strong>Email: </strong>
+            <a href="mailto:patrick.robben@online.nl">patrick.robben@online.nl</a>
+          </p>
+        </figure>
+        <!-- Secretaris -->
+        <figure class="wrapper-main-ledenpagina__leden__lid">
+          <div class="wrapper-main-ledenpagina__leden__lid-title">
+            <strong>Secretaris</strong>
+            <br />
+            Indy
+          </div>
+          <img
+            class="wrapper-main-ledenpagina__leden__lid-img"
+            src="/static/images/contact/contactpersoon.png"
+          />
+          <p class="wrapper-main-ledenpagina__leden__lid-text">
+            <strong>Tel: </strong>
+            <a href="tel:+31630021136">+31 6 30021136</a>
+            <br />
+            <strong>Email: </strong>
+            <a href="mailto:patrick.robben@online.nl">patrick.robben@online.nl</a>
+          </p>
+        </figure>
+      </div>
+      <hr />
       <div class="wrapper-main-ledenpagina-bottom">
         <div class="wrapper-main-ledenpagina-bottom__left">
           <p class="wrapper-main-ledenpagina-bottom__left__text">
