--- a/web/views/word-lid.view.ejs
+++ b/web/views/word-lid.view.ejs
@@ -7,6 +7,9 @@
   <div class="wrapper">
     <%- include ('includes/header.include.ejs') %>
     <div class="wrapper-main">
+      <p class="wrapper-main__text">
+        Een jaarlidmaatschap kost minimaal 15,00 euro.
+      </p>
       <form method="POST" class="form">
         <fieldset class="form-fieldset">
           <div class="form-fieldset__input">
