--- a/web/public/src/styles/ledenpagina.scss
+++ b/web/public/src/styles/ledenpagina.scss
@@ -1,4 +1,59 @@
 .wrapper-main-ledenpagina {
+  //
+  // Leden
+  //
+
+  & > .wrapper-main-ledenpagina__leden {
+    text-align: center;
+
+    & > .wrapper-main-ledenpagina__leden__lid {
+      display: inline-block;
+      margin: 1rem;
+
+      & > .wrapper-main-ledenpagina__leden__lid-title {
+        margin-bottom: 2rem;
+        line-height: 1.3rem;
+        color: #6f6f6f;
+    
+        & > strong {
+          color: #5f5f5f;
+          font-size: 1.4rem;
+          font-weight: bold;
+        }
+      }
+    
+      & > .wrapper-main-ledenpagina__leden__lid-img {
+        border-radius: 50%;
+        width: 100%;
+        max-width: 120px;
+      }
+    
+      & > .wrapper-main-ledenpagina__leden__lid-text {
+        margin-top: 2rem;
+        color: #303030;
+        font-size: 0.9rem;
+        line-height: 1.2rem;
+    
+        & > strong {
+          font-weight: bold;
+        }
+    
+        & > a {
+          text-decoration: none;
+          color: #0080af;
+    
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      } 
+    }
+  }
+
+  //
+  // Andere Zooi
+  //
+
   & > .wrapper-main-ledenpagina-top {
     text-align: center;
     padding: .7rem;
@@ -11,12 +66,30 @@
   }
 
   & > .wrapper-main-ledenpagina-bottom {
-    display: flex;
-  
+    @media only screen and (min-width: 900px)
+    {
+      display: flex;
+
+      & > .wrapper-main-ledenpagina-bottom__right {
+        flex: 2;
+        text-align: right;
+      }
+
+      & > .wrapper-main-ledenpagina-bottom__left {
+        flex: 4;
+        text-align: center;
+      }
+    }
+
+    @media only screen and (max-width: 900px)
+    {
+      & > .wrapper-main-ledenpagina-bottom__left, & > .wrapper-main-ledenpagina-bottom__right
+      {
+        text-align: center;
+      }  
+    }
+    
     & > .wrapper-main-ledenpagina-bottom__right {
-      flex: 2;
-      text-align: right;
-  
       & > .wrapper-main-ledenpagina-bottom__right__text {
         padding: .7rem;
   
@@ -53,8 +126,6 @@
     }
   
     & > .wrapper-main-ledenpagina-bottom__left {
-      flex: 4;
-      text-align: center;
       padding: .7rem 1rem;
 
       & > .wrapper-main-ledenpagina-bottom__left__text {
