--- a/web/views/includes/footer.include.ejs
+++ b/web/views/includes/footer.include.ejs
@@ -43,7 +43,7 @@
         Email: <a href="mailto:dorpsbelangenbergen@gmail.com">dorpsbelangenbergen@gmail.com</a>
       </p>
       <br />
-      <a class="a-clear btn btn-rounded btn-light-hover-red" href="/contact">Vul formulier in</a>
+      <a class="a-clear btn btn-light-hover-red" href="/contact">Vul formulier in</a>
     </div>
   </div>
   <div class="footer__copyright">
