--- a/web/views/leden-pagina.view.ejs
+++ b/web/views/leden-pagina.view.ejs
@@ -41,7 +41,7 @@
           <div class="wrapper-main-ledenpagina__leden__lid-title">
             <strong>Penningmeester</strong>
             <br />
-            Indy
+            Patrick Robben
           </div>
           <img
             class="wrapper-main-ledenpagina__leden__lid-img"
