--- a/web/views/leden-pagina.view.ejs
+++ b/web/views/leden-pagina.view.ejs
@@ -8,14 +8,14 @@
     <%- include ('includes/header.include.ejs') %>
     <div class="wrapper-main wrapper-main-ledenpagina">
       <!-- Page content -->
-      <div class="wrapper-main-ledenpagina-top">
+      <!-- <div class="wrapper-main-ledenpagina-top">
         <ul class="wrapper-main-ledenpagina-top__list">
           <li class="wrapper-main-ledenpagina-top__list-item">
             <a class="btn btn-primary">Politiek Gemeente Bergen</a>
           </li>
         </ul>
       </div>
-      <hr />
+      <hr /> -->
       <div class="wrapper-main-ledenpagina__leden">
         <!-- Voorzitter -->
         <figure class="wrapper-main-ledenpagina__leden__lid">
@@ -30,7 +30,7 @@
           />
           <p class="wrapper-main-ledenpagina__leden__lid-text">
             <strong>Tel: </strong>
-            <a href="tel:+31630021136">+31 6 30021136</a>
+            <a href="tel:+31630022136">+31 6 30022136</a>
             <br />
             <strong>Email: </strong>
             <a href="mailto:patrick.robben@online.nl">patrick.robben@online.nl</a>
@@ -49,7 +49,7 @@
           />
           <p class="wrapper-main-ledenpagina__leden__lid-text">
             <strong>Tel: </strong>
-            <a href="tel:+31630021136">+31 6 30021136</a>
+            <a href="tel:+31630021136">+31 6 30022136</a>
             <br />
             <strong>Email: </strong>
             <a href="mailto:patrick.robben@online.nl">patrick.robben@online.nl</a>
@@ -68,14 +68,14 @@
           />
           <p class="wrapper-main-ledenpagina__leden__lid-text">
             <strong>Tel: </strong>
-            <a href="tel:+31630021136">+31 6 30021136</a>
+            <a href="tel:+31630021136">+31 6 30022136</a>
             <br />
             <strong>Email: </strong>
             <a href="mailto:patrick.robben@online.nl">patrick.robben@online.nl</a>
           </p>
         </figure>
       </div>
-      <hr />
+      <!-- <hr />
       <div class="wrapper-main-ledenpagina-bottom">
         <div class="wrapper-main-ledenpagina-bottom__left">
           <p class="wrapper-main-ledenpagina-bottom__left__text">
@@ -91,9 +91,9 @@
               <area target="" alt="Aijen" title="Aijen" href="" coords="55,138,62,135,72,135,79,143,83,154,78,163,71,166,63,163,65,155,58,148" shape="poly">
               <area target="" alt="Bergen" title="Bergen" href="" coords="53,107,58,111,65,114,69,124,71,130,65,134,59,137,52,140,51,120" shape="poly">
           </map>
-        </div>
+        </div> -->
         <!-- Navigation -->
-        <div class="wrapper-main-ledenpagina-bottom__right">
+        <!-- <div class="wrapper-main-ledenpagina-bottom__right">
           <p class="wrapper-main-ledenpagina-bottom__right__text">
             <strong>Thema's</strong>
           </p>
@@ -136,7 +136,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> -->
     </div>
     <%- include ('includes/footer.include.ejs') %>
   </div>
