--- a/web/views/includes/footer.include.ejs
+++ b/web/views/includes/footer.include.ejs
@@ -13,7 +13,7 @@
         </li> -->
       </ul>
     </div>
-    <div class="footer__top-col">
+`    <div class="footer__top-col">
       <p class="footer__top-col-txtct">
         <strong class="txtct-title">Navigatie</strong>
       </p>
@@ -40,21 +40,21 @@
         <strong class="txtct-title">Contact</strong>
       </p>
       <p class="footer__top-col-txtct">
-        Email: <a href="mailto:dorpsbelangenbergen@gmail.com">dorpsbelangenbergen@gmail.com</a>
+        Email: <a href="mailto:dorpsbelangenbergenlimburg@gmail.com">dorpsbelangenbergenlimburg@gmail.com</a>
       </p>
       <br />
       <a class="a-clear btn btn-light-hover-red" href="/contact">Vul formulier in</a>
     </div>
   </div>
   <div class="footer__copyright">
-    <form action="https://www.paypal.com/donate" id="donate" method="post" target="_top">
+    <!-- <form action="https://www.paypal.com/donate" id="donate" method="post" target="_top">
       <input type="hidden" name="hosted_button_id" value="M6SG6UPB8NY9Y" />
       <input type="image" src="https://www.paypalobjects.com/nl_NL/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
       <img alt="" border="0" src="https://www.paypal.com/nl_NL/i/scr/pixel.gif" width="1" height="1" />
-    </form>
+    </form> -->
     <br />
     <p class="footer__copyright-text">
-      &copy; <%= new Date().getFullYear() %> Dorpsbelangen Bergen, Fannst Webdesign
+      &copy; <%= new Date().getFullYear() %> Dorpsbelangen Bergen
     </p>
   </div>
 </footer>
