--- a/web/views/nieuws-media-item.view.ejs
+++ b/web/views/nieuws-media-item.view.ejs
@@ -8,7 +8,7 @@
     <%- include ('includes/header.include.ejs') %>
     <div class="wrapper-main">
       <div class="nieuws-media-item">
-        <div class="nieuws-media-item__banner" style="background-image: url('<%= artikel.m_ItemThumbnail.m_Formats.large.m_URL %>');">
+        <div class="nieuws-media-item__banner" style="background-image: url('<%= artikel.m_ItemThumbnail ? artikel.m_ItemThumbnail.m_Formats.large.m_URL : '/static/images/dummy.jpg' %>');">
         </div>
         <h3 class="nieuws-media-item__title"><%= artikel.m_ItemTitel %></h3>
         <ul class="nieuws-media-item__desc">
